--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Ecomsur",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "react-router-dom": "^6.10.0"
